--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -1,11 +1,22 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:h="http://java.sun.com/jsf/html"> 
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui">
 
 <h:head></h:head> 
 <body> 
- <h1>Sistema de Prematricula Unicauca</h1>
+	<h:form>
+		<h:panelGrid columns="2" cellpadding="5">
+            <h:outputLabel for="username" value="Usuario*:" />
+            <p:inputText id="username" value="#{usuarioController.usuario.usuario}" required="true" label="username" />
+ 
+            <h:outputLabel for="password" value="Contraseña*:" />
+            <p:password id="password" value="#{usuarioController.usuario.password}" required="true" label="password" />
+ 
+            <p:commandButton value="Iniciar Sesión" action="#{usuarioController.iniciarSesion()}" actionListener="#{usuarioController.validacion()}"/>  
+        </h:panelGrid>
+	</h:form>
 </body> 
 </html>
