--- a/WebContent/Estudiante/ProcesoPrematricula.xhtml
+++ b/WebContent/Estudiante/ProcesoPrematricula.xhtml
@@ -3,7 +3,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:p="http://primefaces.org/ui"
+	xmlns:p="http://www.primefaces.org/ui"
 	xmlns:fn="http://java.sun.com/jsp/jstl/functions">
 
 <h:head>
