--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -7,16 +7,23 @@
 
 <h:head></h:head> 
 <body> 
-	<h:form>
-		<h:panelGrid columns="2" cellpadding="5">
-            <h:outputLabel for="username" value="Usuario*:" />
-            <p:inputText id="username" value="#{usuarioController.usuario.usuario}" required="true" label="username" />
- 
-            <h:outputLabel for="password" value="Contraseña*:" />
-            <p:password id="password" value="#{usuarioController.usuario.password}" required="true" label="password" />
- 
-            <p:commandButton value="Iniciar Sesión" action="#{usuarioController.iniciarSesion()}" actionListener="#{usuarioController.validacion()}"/>  
-        </h:panelGrid>
-	</h:form>
+	<h:form >
+		<br/><br/>
+	    <div align="center">
+		    <p:panel id="panel" header="Iniciar Sesión" style="width:350px; text-align:center" >
+		       	<h:panelGrid columns="2" >
+			    	<h:outputLabel for="usuario" value="Usuario*" />
+			        <p:inputText id="usuario" value="#{prematriculaController.usuario.username}" />
+			        <h:outputLabel for="contrasena" value="Contraseña*" />
+			        <p:password  id="contrasena" value="#{prematriculaController.usuario.password}" />
+			        <br></br>
+			        <p:commandButton icon="ui-icon-key" id="btnAcceder" value="Iniciar Sesión" 
+			        	ajax="false" action="#{prematriculaController.iniciarSesion()}" 
+			        	actionListener="#{prematriculaController.validacion()}" />
+		        </h:panelGrid>
+		        <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
+		    </p:panel>
+	    </div>
+    </h:form>
 </body> 
 </html>
