--- a/WebContent/main.xhtml
+++ b/WebContent/main.xhtml
@@ -8,7 +8,7 @@
 <ui:composition template="/templates/_main.xhtml">
 	<ui:define name="content">
 		<p:outputPanel id="mainContentPanel">
-			<ui:include src="/Coordinador.xhtml" />
+			<ui:include src="/content.xhtml" />
 		</p:outputPanel>
 	</ui:define>
 	<ui:define name="menu">
