--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -1,12 +1,18 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
 
-<h:head></h:head> 
-<body> 
+<h:head>
+	<link rel="stylesheet" type="text/css" href="resources/css/index.css" />
+</h:head> 
+<body>
+<div id="fondoh2">	
+		<div id="escudoUnicauca"></div>
+		<p id="fuente">Sistema de Pre Matricula</p>	
+	 
 	<h:form >
 		<br/><br/>
 	    <div align="center">
@@ -25,5 +31,6 @@
 		    </p:panel>
 	    </div>
     </h:form>
+    </div>
 </body> 
 </html>
