--- a/WebContent/Estudiante/ProcesoPrematricula.xhtml
+++ b/WebContent/Estudiante/ProcesoPrematricula.xhtml
@@ -52,6 +52,10 @@
 							<p style="text-align: justify;">
 								<b>4.</b> Tener en cuenta el numero de creditos requeridos.
 							</p>
+							
+							<p style="text-align: justify;">
+								<b>5.</b> Este proceso solo puede realizarce una vez por periodo académico.
+							</p>
 						</p:panel>
 						
 						<p:panel>
@@ -67,6 +71,12 @@
 							</p>
 							<p style="text-align: justify;">	
 								<b>3. </b>Confirmar las materias seleccionadas o editar su proceso de matricula.
+							</p>
+							<br/>
+							<br/>
+							<p style="text-align: justify;">	
+								Esta es version Beta del sistema de Prematriculas por lo cual pueden presentarse 
+								algunos fallos.
 							</p>
 						</p:panel>
 					</h:panelGrid>
