--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -16,12 +16,19 @@
 	<h:form >
 		<br/><br/>
 	    <div align="center">
-		    <p:panel id="panel" header="Iniciar Sesión" style="width:350px; text-align:center" >
+		    <p:panel id="panel" header="Iniciar Sesión" style="width:550px; text-align:center" >
 		       	<h:panelGrid columns="2" >
-			    	<h:outputLabel for="usuario" value="Usuario*" />
-			        <p:inputText id="usuario" value="#{prematriculaController.usuario.username}" />
-			        <h:outputLabel for="contrasena" value="Contraseña*" />
-			        <p:password  id="contrasena" value="#{prematriculaController.usuario.password}" />
+			    	
+			        <h:outputLabel for="codigo" value="Codigo*" />
+			        <p:inputText id="codigo" value="#{prematriculaController.usuario.codigo}" />
+			        <h:outputLabel for="progr" value="Programa Académico*" />
+			        <p:selectOneMenu id="progr" value="#{prematriculaController.programa}">
+			        	<f:selectItem itemLabel="Ingeniería de Sistemas" itemValue="38" />
+			        	<f:selectItem itemLabel="Ingeniería Electrónica y Telecomunicaciones" itemValue="37" />
+			        	<f:selectItem itemLabel="Ingeniería en Automática Industrial" itemValue="34" />
+			        	<f:selectItem itemLabel="Tecnología en Telemática" itemValue="26" />
+			        </p:selectOneMenu>
+			        
 			        <br></br>
 			        <p:commandButton icon="ui-icon-key" id="btnAcceder" value="Iniciar Sesión" 
 			        	ajax="false" action="#{prematriculaController.iniciarSesion()}" 
